// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthenticationSettingsOps createAuthenticationSettingsExportTemplate() 1: Create AuthenticationSettings Export Template 1`] = `
{
  "authentication": {},
  "meta": Any<Object>,
}
`;

exports[`AuthenticationSettingsOps exportAuthenticationSettings() 1: Export Realm AuthenticationSettings 1`] = `
{
  "authentication": {
    "_id": "",
    "_rev": "-1952817720",
    "_type": {
      "_id": "EMPTY",
      "collection": false,
      "name": "Core",
    },
    "accountlockout": {
      "lockoutDuration": 0,
      "lockoutDurationMultiplier": 1,
      "lockoutWarnUserCount": 0,
      "loginFailureCount": 5,
      "loginFailureDuration": 300,
      "loginFailureLockoutMode": false,
      "storeInvalidAttemptsInDataStore": true,
    },
    "core": {
      "adminAuthModule": "Login",
      "orgConfig": "Login",
    },
    "general": {
      "defaultAuthLevel": 0,
      "externalLoginPageUrl": "https://volker-demo.encore.forgerock.com/demo/webapp/en/home/redirect",
      "identityType": [
        "agent",
        "user",
      ],
      "locale": "en_US",
      "statelessSessionsEnabled": false,
      "twoFactorRequired": false,
      "userStatusCallbackPlugins": [],
    },
    "postauthprocess": {
      "loginFailureUrl": [],
      "loginPostProcessClass": [],
      "loginSuccessUrl": [
        "/enduser/?realm=/alpha",
      ],
      "userAttributeSessionMapping": [],
      "usernameGeneratorClass": "com.sun.identity.authentication.spi.DefaultUserIDGenerator",
      "usernameGeneratorEnabled": true,
    },
    "security": {
      "addClearSiteDataHeader": true,
      "keyAlias": "test",
      "moduleBasedAuthEnabled": false,
      "sharedSecret": {
        "$string": "&{am.authentication.shared.secret}",
      },
      "zeroPageLoginAllowedWithoutReferrer": true,
      "zeroPageLoginEnabled": false,
      "zeroPageLoginReferrerWhiteList": [],
    },
    "trees": {
      "authenticationSessionsMaxDuration": 5,
      "authenticationSessionsStateManagement": "JWT",
      "authenticationSessionsWhitelist": false,
      "authenticationTreeCookieHttpOnly": true,
      "suspendedAuthenticationTimeout": 1440,
    },
    "userprofile": {
      "aliasAttributeName": [
        "uid",
      ],
      "defaultRole": [],
      "dynamicProfileCreation": "false",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`AuthenticationSettingsOps readAuthenticationSettings() 1: Read Realm AuthenticationSettings 1`] = `
{
  "_id": "",
  "_rev": "-1952817720",
  "_type": {
    "_id": "EMPTY",
    "collection": false,
    "name": "Core",
  },
  "accountlockout": {
    "lockoutDuration": 0,
    "lockoutDurationMultiplier": 1,
    "lockoutWarnUserCount": 0,
    "loginFailureCount": 5,
    "loginFailureDuration": 300,
    "loginFailureLockoutMode": false,
    "storeInvalidAttemptsInDataStore": true,
  },
  "core": {
    "adminAuthModule": "Login",
    "orgConfig": "Login",
  },
  "general": {
    "defaultAuthLevel": 0,
    "externalLoginPageUrl": "https://volker-demo.encore.forgerock.com/demo/webapp/en/home/redirect",
    "identityType": [
      "agent",
      "user",
    ],
    "locale": "en_US",
    "statelessSessionsEnabled": false,
    "twoFactorRequired": false,
    "userStatusCallbackPlugins": [],
  },
  "postauthprocess": {
    "loginFailureUrl": [],
    "loginPostProcessClass": [],
    "loginSuccessUrl": [
      "/enduser/?realm=/alpha",
    ],
    "userAttributeSessionMapping": [],
    "usernameGeneratorClass": "com.sun.identity.authentication.spi.DefaultUserIDGenerator",
    "usernameGeneratorEnabled": true,
  },
  "security": {
    "addClearSiteDataHeader": true,
    "keyAlias": "test",
    "moduleBasedAuthEnabled": false,
    "sharedSecret": {
      "$string": "&{am.authentication.shared.secret}",
    },
    "zeroPageLoginAllowedWithoutReferrer": true,
    "zeroPageLoginEnabled": false,
    "zeroPageLoginReferrerWhiteList": [],
  },
  "trees": {
    "authenticationSessionsMaxDuration": 5,
    "authenticationSessionsStateManagement": "JWT",
    "authenticationSessionsWhitelist": false,
    "authenticationTreeCookieHttpOnly": true,
    "suspendedAuthenticationTimeout": 1440,
  },
  "userprofile": {
    "aliasAttributeName": [
      "uid",
    ],
    "defaultRole": [],
    "dynamicProfileCreation": "false",
  },
}
`;
